--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,62 +1,60 @@
-name: Build
+name: Build All Platforms
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches: [ main ]
-  # pull_request:
-  #   branches: [ main ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build_android:
-    name: Build Android APK
+  # Этот воркфлоу координирует сборку всех платформ
+  # Для отдельной сборки используйте специализированные воркфлоу:
+  # - build-android.yml
+  # - build-windows.yml  
+  # - build-linux.yml
+  # - build-web.yml
+  
+  info:
+    name: Build Information
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '11'
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-      - run: flutter pub get
-      - run: flutter build apk --release
-      - uses: actions/upload-artifact@v2
-        with:
-          name: release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+      - name: Print build info
+        run: |
+          echo "🚀 Building WhaleSkin for all platforms"
+          echo "📱 Android APK and AAB will be built"
+          echo "🖥️ Windows x64 desktop app will be built"
+          echo "🐧 Linux x64 desktop app will be built"
+          echo "🌐 Web application will be built"
+          echo ""
+          echo "Use individual workflow files for platform-specific builds:"
+          echo "- .github/workflows/build-android.yml"
+          echo "- .github/workflows/build-windows.yml"
+          echo "- .github/workflows/build-linux.yml"
+          echo "- .github/workflows/build-web.yml"
 
-  build_windows:
-    name: Build Windows Desktop
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-      - run: flutter config --enable-windows-desktop
-      - run: flutter pub get
-      - run: flutter build windows --release
-      - uses: actions/upload-artifact@v2
-        with:
-          name: windows-release
-          path: build/windows/runner/Release/
-
-  build_linux:
-    name: Build Linux Desktop
+  # Проверка кода перед сборкой
+  analyze:
+    name: Analyze Code
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: sudo apt-get update -y
-      - run: sudo apt-get install -y ninja-build libgtk-3-dev
-      - uses: subosito/flutter-action@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-      - run: flutter config --enable-linux-desktop
-      - run: flutter pub get
-      - run: flutter build linux --release
-      - uses: actions/upload-artifact@v2
-        with:
-          name: linux-release
-          path: build/linux/x64/release/bundle/
+          cache: true
+
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Generate code
+        run: flutter packages pub run build_runner build --delete-conflicting-outputs
+
+      - name: Analyze code
+        run: flutter analyze
+
+      - name: Check formatting
+        run: dart format --set-exit-if-changed lib/
