feat: Comment out push and pull_request triggers in workflow files for Android, Linux, Windows, and Web builds

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -2,18 +2,18 @@ name: Build Android
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
-    paths:
-      - 'lib/**'
-      - 'android/**'
-      - 'pubspec.yaml'
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'lib/**'
-      - 'android/**'
-      - 'pubspec.yaml'
+  # push:
+  #   branches: [ main ]
+  #   paths:
+  #     - 'lib/**'
+  #     - 'android/**'
+  #     - 'pubspec.yaml'
+  # pull_request:
+  #   branches: [ main ]
+  #   paths:
+  #     - 'lib/**'
+  #     - 'android/**'
+  #     - 'pubspec.yaml'
 
 jobs:
   build_android:
