Refactor settings and API key screens to use StatelessWidget; remove unnecessary state management and UI elements. Update main app routing to handle loading state with a placeholder. Add dependencies for chat UI kit. Simplify widget tests to verify app initialization.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   # File path utilities
   path_provider: ^2.1.1
 
+  # Chat UI Kit
+  flutter_chat_core: ^2.0.0
+  flutter_chat_ui: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
