--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: whaleskin
-description: "deepsek wrapper with custom features"
+description: "DeepSeek wrapper with custom features"
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -57,9 +58,17 @@ dependencies:
   # File path utilities
   path_provider: ^2.1.1
 
+  # Chat UI Kit
+  flutter_chat_core: ^2.0.0
+  flutter_chat_ui: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Testing dependencies
+  bloc_test: ^9.1.5
+  mocktail: ^1.0.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
